Updated some projects

--- a/app1-basics/index.html
+++ b/app1-basics/index.html
@@ -1,6 +1,11 @@
-<html>
-	<body>
-	
+<html ng-app='myApp'>
+	<body ng-controller = 'myCtrl'>
+	Your First Name: <input type='text' placeholder='Please enter your name' ng-model='name'>
+	<br>
+	<div>{{name}}</div>
+
+
+
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
 		<script src="app.js"></script>
 		<script src="controller.js"></script>
