--- a/app2-an_array/index.html
+++ b/app2-an_array/index.html
@@ -3,6 +3,13 @@
 		<link rel="stylesheet" href="style.css"></link>
 	</head>
 	<body ng-controller="arrayController">
+
+		<div> 
+			<ul>
+				<li class = "row" ng-repeat = "name in arrayData">Name: {{name.name}} || Email: {{name.email}}</li>
+
+			</ul>
+		</div>
 	
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script src="app.js"></script>
